# SLS

./: .gitignore  AGENTS.md  ANGLE_TRANSFORM_BUG_DETAILS.md  CLAUDE.md  CMakeLists.txt  CODE_LOCATIONS_SUMMARY.md  Coupling_Loss_Root_Cause_Analysis.docx  DEBUG_REPORT_ZSD_DISCREPANCY.md  EMIMO_SLS_DU_B.cfg  EMIMO_SLS_UMi_MatlabStack.cfg  EXECUTIVE_SUMMARY.txt  EXTRACTED_SECTIONS.md  FullCal_UMa_Config1_6GHz.cfg  FullCal_UMa_Config2_6GHz.cfg  FullCal_UMa_Config3_7GHz.cfg  FullCal_UMi_Config1_6GHz.cfg  FullCal_UMi_Config1_7GHz_SNS.cfg  FullCal_UMi_Config2_6GHz.cfg  FullCal_UMi_Config3_7GHz.cfg  FullCal_UMi_Config3_7GHz_SNS.cfg  FullCal_UMi_Config3_7GHz_baseline.cfg  INVESTIGATION_SUMMARY.md  README_DEBUG_ANALYSIS.md  TEST_REPRODUCTION_STEPS.md  Tbps_DU_B.cfg  VISUAL_FLOW_DIAGRAM.txt  export_matlab_bler.m  export_rbir_esm.m  plot_calibration_cdf_config2.asv
.claude/: settings.local.json
.claude/agent-memory/3gpp-spec-interpreter/: MEMORY.md  pathloss-verification.md
.claude/agent-memory/cfg-param-integrator/: MEMORY.md
.claude/agent-memory/code-refactorer/: MEMORY.md
.claude/agent-memory/code-reviewer/: MEMORY.md  location-generation-algorithms.md  refactoring-patterns.md
.claude/agents/: 3gpp-spec-interpreter.md  cfg-param-integrator.md  code-refactorer.md  code-reviewer.md
UI_input/: test_DU_A.cfg  test_DU_B.cfg  test_InH_A.cfg  test_InH_B.cfg  test_InH_C.cfg  test_Rural_A.cfg  test_Rural_B.cfg  test_Rural_C.cfg
doc/: 25996-j00.docx  25996-j00_Annex A.docx  38901-j10.docx  38901_full_text.txt  38901_reference.md  BLER_Table_Comparison.md  BugAudit_2026-07-10.md  KOR-2 EVAL 20260119.docx  RSRP_formula.md  RowBeam_AnalogBeamSelection.md  SNS_ANALYSIS_README.md  SNS_Attenuation_Analysis.md  SNS_Code_Flow.md  SNS_Formula_Technical_Summary.md  UT_handheld_antenna.md  annex_a.tex  handheld_implementation.md  spatial_non_stationarity_implementation.md
fixcheck_cfg/: FC_A.cfg  FC_B.cfg  FC_RB.cfg
h/: BS.h  Initiallization.h  Link.h  Logging_point.h  MS.h  channel.h  common.h  compute_BLER_CR.h  const.h  nr_l2sm.h  paramFastFading.h  precision.h  rv_generate.h  sector.h  sls_lls_mapping.h  standard.h
rowbeam_ab_cfg/: RB_i_baseline.cfg  RB_ii_vote.cfg  RB_iii_uniform.cfg
src/: BS.cpp  Initiallization.cpp  Link.cpp  Link.cpp.backup2  Link.cpp.bak  Logging_Point.cpp  MS.cpp  PerdropStatistics.cpp  Print.cpp  allocateMemory.cpp  channel.cpp  channel_update.cpp  generateLSP.cpp  generateSSP.cpp  main.cpp  measure.cpp  nr_l2sm.cpp  paramFastfading.cpp  receive_downlink.cpp  scheduling.cpp  sector.cpp  setFastfadingParam.cpp  setSimulParam.cpp  standard.cpp
